# mailpilot-ai

./: .env.example  .gitignore  :memory:  AGENTS.md  BACKLOG.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
mailpilot/: ai_classifier.py  cli.py  config.py  database.py  email_processor.py  gmail_client.py  main.py  models.py  scheduler.py  ui.py
mailpilot-runner/: .env.example  .gitignore  README.md  pyproject.toml
mailpilot-runner/mailpilot/: ai_classifier.py  cli.py  config.py  database.py  email_processor.py  gmail_client.py  main.py  models.py  persistence.py  scheduler.py  ui.py
mailpilot-runner/tests/: conftest.py  fakes.py  test_account_processing_toggle.py  test_accounts_reauth_skip.py  test_basic.py  test_database.py  test_email_processor.py  test_email_processor_limits_and_idempotency.py  test_error_screens.py  test_failure_resilience.py  test_history_cli.py  test_multi_account_isolation.py  test_persistence_check.py  test_query_options.py  test_safe_gmail_client.py  test_scheduler_and_gmailclient.py  test_scoped_list_active.py  test_sender_safety.py
mailpilot-web/: .env.local.example  .gitignore  ARCHETECTURE.md  README.md  middleware.ts  package-lock.json  package.json
mailpilot-web/app/: globals.css  layout.tsx  page.tsx
tests/: test_basic.py  test_database.py  test_email_processor.py  test_email_processor_limits_and_idempotency.py  test_error_screens.py  test_failure_resilience.py  test_history_cli.py  test_query_options.py  test_safe_gmail_client.py  test_scheduler_and_gmailclient.py  test_sender_safety.py
(+23 files in other folders)
